This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: test_ctypes is leaking references
Type: Stage: resolved
Components: Tests Versions: Python 3.9
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: Anthony Sottile, pablogsal, steve.dower, vstinner
Priority: normal Keywords: patch

Created on 2019-09-10 13:06 by pablogsal, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 15848 merged pablogsal, 2019-09-10 13:10
PR 15852 merged miss-islington, 2019-09-10 13:33
Messages (10)
msg351640 - (view) Author: Pablo Galindo Salgado (pablogsal) * (Python committer) Date: 2019-09-10 13:06
test_ctypes leaked [22, 22, 22] references, sum=66
3 tests failed again:
    test_ctypes test_import test_importlib


https://buildbot.python.org/all/#/builders/1/builds/710
msg351641 - (view) Author: Pablo Galindo Salgado (pablogsal) * (Python committer) Date: 2019-09-10 13:06
Bisecting points to commit 65366bc8bdc4716ebc361e622590b45a6e5aef07
msg351653 - (view) Author: Steve Dower (steve.dower) * (Python committer) Date: 2019-09-10 13:32
New changeset a511c7a4961a684db1f8d0ed438822d87d7d3dcf by Steve Dower (Pablo Galindo) in branch 'master':
bpo-38090: Fix reference leak in ceval.c (GH-15848)
https://github.com/python/cpython/commit/a511c7a4961a684db1f8d0ed438822d87d7d3dcf
msg351655 - (view) Author: Steve Dower (steve.dower) * (Python committer) Date: 2019-09-10 13:33
Thanks Pablo!
msg351674 - (view) Author: Steve Dower (steve.dower) * (Python committer) Date: 2019-09-10 14:31
New changeset 45bc3928e232603a97451dea3106d824b0f7a392 by Steve Dower (Miss Islington (bot)) in branch '3.8':
bpo-38090: Fix reference leak in ceval.c (GH-15848)
https://github.com/python/cpython/commit/45bc3928e232603a97451dea3106d824b0f7a392
msg351683 - (view) Author: Anthony Sottile (Anthony Sottile) * Date: 2019-09-10 14:43
oops! thanks for the quick fix, I'll double check where I copied this from since it might have the same bug
msg351685 - (view) Author: Anthony Sottile (Anthony Sottile) * Date: 2019-09-10 14:47
https://github.com/python/cpython/pull/6398/files#diff-fb54fd281a2569006594f7edc6ad90f9R744

hmm I assume _PyDict_GetItemId has different reference semantics?
msg351692 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2019-09-10 14:57
FTR it seems like it was a regression introduced by:

commit 2d5594fac21a81a06f82c3605318dfa96e72398f
Author: Steve Dower <steve.dower@python.org>
Date:   Mon Sep 9 09:45:18 2019 -0700

    bpo-20490: Improve circular import error message (GH-15308)

Thanks for the quick fix ;-)
msg351695 - (view) Author: Steve Dower (steve.dower) * (Python committer) Date: 2019-09-10 15:00
> hmm I assume _PyDict_GetItemId has different reference semantics?

Pretty sure it's the same. Perhaps we don't have any test coverage for that one?
msg351704 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2019-09-10 15:37
> hmm I assume _PyDict_GetItemId has different reference semantics?

PyDict_GetItem() and _PyDict_GetItemId() return a borrowed reference.

PyObject_GetAttr() and _PyObject_GetAttrId() return a strong reference.
History
Date User Action Args
2022-04-11 14:59:20adminsetgithub: 82271
2019-09-10 15:37:57vstinnersetmessages: + msg351704
2019-09-10 15:00:12steve.dowersetmessages: + msg351695
2019-09-10 14:57:06vstinnersetnosy: + vstinner
messages: + msg351692
2019-09-10 14:47:06Anthony Sottilesetmessages: + msg351685
2019-09-10 14:43:44Anthony Sottilesetmessages: + msg351683
2019-09-10 14:31:10steve.dowersetmessages: + msg351674
2019-09-10 13:34:02steve.dowersetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2019-09-10 13:33:26steve.dowersetmessages: + msg351655
2019-09-10 13:33:09miss-islingtonsetpull_requests: + pull_request15501
2019-09-10 13:32:58steve.dowersetmessages: + msg351653
2019-09-10 13:13:29pablogsalsetnosy: + steve.dower, Anthony Sottile
2019-09-10 13:10:10pablogsalsetkeywords: + patch
stage: patch review
pull_requests: + pull_request15497
2019-09-10 13:06:28pablogsalsetmessages: + msg351641
2019-09-10 13:06:05pablogsalcreate