bpo-38090: Fix reference leak in ceval.c (GH-15848)